@@ -12,6 +12,7 @@ Version 1.1.5 to be released
 - Enh #1555: Added support to allow unloading/resetting an application component by calling CModule::setComponent() (Qiang)
 - Enh #1560: Removed potential circular references in relational AR queries (Qiang)
 - Enh #1578: Added support to parse AM/PM by CDateTimeParser (Qiang)
+- Enh #1583: Upgraded HTMLPurifier to v4.1.1 (Sam Dark)
 - Chg: The javascript files of CListView and CGridView are now registered at the end of the page (Qiang)
 
 Version 1.1.4 September 5, 2010
